--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "modules/CTNH-Bio"]
 	path = modules/CTNH-Bio
-	url = https://github.com/moguang2004/CTNH-Bio.git
+	url = https://github.com/CTNH-Team/CTNH-Bio.git
 [submodule "modules/CTNH-Core"]
 	path = modules/CTNH-Core
-	url = https://github.com/CPearl0/CTNH-Core.git
+	url = https://github.com/CTNH-Team/CTNH-Core.git
 [submodule "modules/CTPP"]
 	path = modules/CTPP
 	url = https://github.com/moguang2004/CTPP.git
