--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,10 @@ task runDataBio(type: GradleBuild) {
     tasks = [':modules:CTNH-Bio:runData']
 }
 
+task buildBio(type: GradleBuild) {
+    tasks = [':modules:CTNH-Bio:build']
+}
+
 task runCore(type: GradleBuild) {
     tasks = [':modules:CTNH-Core:runClient']
 }
@@ -117,10 +121,18 @@ task runDataCore(type: GradleBuild) {
     tasks = [':modules:CTNH-Core:runData']
 }
 
+task buildCore(type: GradleBuild) {
+    tasks = [':modules:CTNH-Core:build']
+}
+
 task runCTPP(type: GradleBuild) {
     tasks = [':modules:CTPP:runClient']
 }
 
 task runDataCTPP(type: GradleBuild) {
     tasks = [':modules:CTPP:runData']
+}
+
+task buildCTPP(type: GradleBuild) {
+    tasks = [':modules:CTPP:build']
 }
