--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,7 @@ include "modules:CTNH-Bio"
 include "modules:CTNH-Core"
 include "modules:CTPP"
 include "modules:CTNH-Lib"
+include "modules:CTNH-Mana"
 //include "modules:1.14.4"
 //include "modules:1.15.2"
 //include "modules:1.16.5"
