--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/CTNH-Team/CTNH-Lib.git
 [submodule "modules/CTNH-Mana"]
 	path = modules/CTNH-Mana
-	url = https://github.com/CTNH-Team/CTNH-Mana.git
+	url = https://github.com/CTNH-Team/CTNH-Mana
