--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,10 @@ systemProp.http.proxyPort=7890
 systemProp.https.proxyHost=127.0.0.1
 systemProp.https.proxyPort=7890
 
-minecraft_version=1.20.1
-
-forge_version=47.4.1
+# Base properties
+# minecraft version
+    minecraft_version=1.20.1
+# forge version, latest version can be found on https://files.minecraftforge.net/
+    forge_version=47.4.1
+    mapping_channel=parchment
+    mapping_version=2023.09.03
