--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,65 @@
 # Gradle
 org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+
 
 systemProp.http.proxyHost=127.0.0.1
 systemProp.http.proxyPort=7890
 systemProp.https.proxyHost=127.0.0.1
 systemProp.https.proxyPort=7890
 
-# Base properties
-# minecraft version
-    minecraft_version=1.20.1
+minecraft_version=1.20.1
 # forge version, latest version can be found on https://files.minecraftforge.net/
-    forge_version=47.4.1
-    mapping_channel=parchment
-    mapping_version=2023.09.03
+forge_version=47.4.1
+mapping_channel=parchment
+mapping_version=2023.09.03
+
+# Mod Properties
+mod_version=1.0.18
+maven_group=io.github.cpearl0.ctnhcore
+archives_base_name=CTNH Core
+mod_id=ctnhcore
+mod_name=CTNH Core
+mod_url=
+mod_author=CTNH Team
+mod_description=Mod for the modpack Create: New Horizon.
+mod_license=MIT License
+
+# GregTech
+gtceu_version=7.2.0
+ldlib_version=1.0.42
+registrate_version=MC1.20-1.3.11
+configuration_version=2.2.0
+
+# XEI
+jei_version=15.20.0.105
+emi_version = 1.1.13
+
+#Create
+create_version=6.0.6-168
+flywheel_version=1.0.4
+ponder_version=1.0.78
+
+#Ad-astra
+resourcefullib_version=2.1.28
+resourcefulconfig_version=2.1.2
+botarium_version=2.3.4
+ad_astra_version=1.15.20
+
+#EIO
+graphlib_version=3.0.4
+enderio_version=1.20.1-6.2.14-beta
+
+#kubejs
+kubejs_version=2001.6.5-build.16
+rhino_version=2001.2.3-build.6
+architectury_version=9.2.14
+
+#Magic
+curios_version=5.9.1+1.20.1
+bloodmagic_version=KFYCrtLV
+libx_version=5.0.12
+geckolib_version=4.4.9
+botania_version=1.20.1-450-FORGE
+arsnouveau_version = 4.12.7.264
+
+ae2_version=15.4.10
