--- a/settings.gradle
+++ b/settings.gradle
@@ -32,6 +32,7 @@ include "modules:CTNH-Core"
 include "modules:CTPP"
 include "modules:CTNH-Lib"
 include "modules:CTNH-Mana"
+include "modules:CTNH-Energy"
 //include "modules:1.14.4"
 //include "modules:1.15.2"
 //include "modules:1.16.5"
