--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    //id 'fabric-loom' version '1.3-SNAPSHOT' apply(false)
+    // id 'fabric-loom' version '1.3-SNAPSHOT' apply(false)
     id 'net.neoforged.moddev.legacyforge' version '2.0.91' apply(false)
-    //id("org.spongepowered.mixin") version "0.7-SNAPSHOT" apply(false)
-
+    // id("org.spongepowered.mixin") version "0.7-SNAPSHOT" apply(false)
 }
+
 allprojects {
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
@@ -15,21 +15,22 @@ allprojects {
         }
     }
 }
+
 subprojects {
     apply plugin: 'java'
-    //apply plugin: 'net.minecraftforge.gradle'
+    // apply plugin: 'net.minecraftforge.gradle'
     apply plugin: 'net.neoforged.moddev.legacyforge'
 
-    //apply plugin: 'org.parchmentmc.librarian.forgegradle'
-    //java.withSourcesJar()
-    //java.withJavadocJar()
+    // apply plugin: 'org.parchmentmc.librarian.forgegradle'
+    // java.withSourcesJar()
+    // java.withJavadocJar()
     legacyForge {
-//        version = project.minecraft_version + '-' + project.forge_version
-//
-//        parchment {
-//            mappingsVersion = project.mapping_version
-//            minecraftVersion = project.minecraft_version
-//        }
+        // version = project.minecraft_version + '-' + project.forge_version
+        //
+        // parchment {
+        //     mappingsVersion = project.mapping_version
+        //     minecraftVersion = project.minecraft_version
+        // }
     }
 
     repositories {
@@ -68,9 +69,9 @@ subprojects {
         maven {
             url = "https://maven.teamresourceful.com/repository/maven-public/"
         }
-//        maven {
-//            url = "https://maven.firstdarkdev.xyz/snapshots"
-//        }
+        // maven {
+        //     url = "https://maven.firstdarkdev.xyz/snapshots"
+        // }
         maven {
             url = "https://maven.gtceu.com"
         }
@@ -95,7 +96,6 @@ subprojects {
                 includeGroup "dev.latvian.apps"
             }
         }
-
         maven {
             url 'https://jitpack.io'
             content {
@@ -114,20 +114,21 @@ subprojects {
             name = "TerraformersMC"
             url = "https://maven.terraformersmc.com/"
         }
-        maven {
-            url "https://maven.nova-committee.cn/s3"
-        }
-//        maven {
-//            url "http://tehnut.info/maven/"
-//            allowInsecureProtocol = true
-//            content {
-//                includeGroup "com.wayoftime.bloodmagic"
-//            }
-//        }
+        // maven {
+        //     url "https://maven.nova-committee.cn/s3"
+        // }
+        // maven {
+        //     url "http://tehnut.info/maven/"
+        //     allowInsecureProtocol = true
+        //     content {
+        //         includeGroup "com.wayoftime.bloodmagic"
+        //     }
+        // }
     }
+
     dependencies {
         modCompileOnly("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
-        //modImplementation("dev.emi:emi-forge:${emi_version}+${minecraft_version}")
+        // modImplementation("dev.emi:emi-forge:${emi_version}+${minecraft_version}")
         modImplementation("curse.maven:emi-580555:6420945")
         modImplementation("curse.maven:tmrv-1194921:7259315")
         modImplementation("extra-mods:gtceu-1.20.1-7.4.1-ctnh-slim") { transitive = false }
