--- a/gradle.properties
+++ b/gradle.properties
@@ -1,59 +1,61 @@
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 
-minecraft_version=1.20.1
+# minecraft version
+minecraft_version = 1.20.1
 # forge version, latest version can be found on https://files.minecraftforge.net/
-forge_version=47.4.1
-mapping_channel=parchment
-mapping_version=2023.09.03
+forge_version = 47.4.1
+mapping_channel = parchment
+mapping_version = 2023.09.03
 
 # Mod Properties
-mod_version=1.0.18
-maven_group=io.github.cpearl0.ctnhcore
-archives_base_name=CTNH Core
-mod_id=ctnhcore
-mod_name=CTNH Core
-mod_url=
-mod_author=CTNH Team
-mod_description=Mod for the modpack Create: New Horizon.
-mod_license=MIT License
+mod_version = 1.4.0
+maven_group = io.github.cpearl0.ctnhcore
+archives_base_name = CTNH Core
+mod_id = ctnhcore
+mod_name = CTNH Core
+mod_url = https://github.com/CTNH-Team/CTNH-Core
+mod_author = CTNH Team
+mod_description = Mod for the modpack Create: New Horizon.
+mod_license = LGPLv3
 
 # GregTech
-gtceu_version=7.4.1
-ldlib_version=1.0.48
-registrate_version=MC1.20-1.3.11
-configuration_version=2.2.0
+    gtceu_version = 7.4.1
+    ldlib_version = 1.0.48
+    registrate_version = MC1.20-1.3.11
+    configuration_version = 2.2.0
 
 # XEI
-jei_version=15.20.0.115
-emi_version = 1.1.22
+    jei_version = 15.20.0.115
+    emi_version = 1.1.22
 
-#Create
-create_version=6.0.6-168
-flywheel_version=1.0.4
-ponder_version=1.0.78
+# Create
+    create_version = 6.0.6-168
+    flywheel_version = 1.0.4
+    ponder_version = 1.0.78
 
-#Ad-astra
-resourcefullib_version=2.1.28
-resourcefulconfig_version=2.1.2
-botarium_version=2.3.4
-ad_astra_version=1.15.20
+# Ad-astra
+    resourcefullib_version = 2.1.28
+    resourcefulconfig_version = 2.1.2
+    botarium_version = 2.3.4
+    ad_astra_version = 1.15.20
 
-#EIO
-graphlib_version=3.0.4
-enderio_version=1.20.1-6.2.14-beta
+# EIO
+    graphlib_version = 3.0.4
+    enderio_version = 1.20.1-6.2.14-beta
 
-#kubejs
-kubejs_version=2001.6.5-build.16
-rhino_version=2001.2.3-build.6
-architectury_version=9.2.14
+# kubejs
+    kubejs_version = 2001.6.5-build.16
+    rhino_version = 2001.2.3-build.6
+    architectury_version = 9.2.14
 
-#Magic
-curios_version=5.9.1+1.20.1
-bloodmagic_version=bgY3aWtr
-libx_version=5.0.12
-geckolib_version=4.4.9
-botania_version=1.20.1-450-FORGE
-arsnouveau_version = 4.12.7.264
+# Magic
+    curios_version = 5.9.1+1.20.1
+    bloodmagic_version = bgY3aWtr
+    libx_version = 5.0.12
+    geckolib_version = 4.4.9
+    botania_version = 1.20.1-450-FORGE
+    arsnouveau_version = 4.12.7.264
 
-ae2_version=15.4.10
+# AE2
+    ae2_version = 15.4.10
