修正依赖写法

--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,7 @@ subprojects {
         //modImplementation("dev.emi:emi-forge:${emi_version}+${minecraft_version}")
         modImplementation("curse.maven:emi-580555:6420945")
         modImplementation("curse.maven:tmrv-1194921:7259315")
-        modImplementation("extra-mods:gtceu-1.20.1-7.4.1-ctnh-slim") { transitive = false }
+        modImplementation("extra-mods:gtceu-1.20.1:7.4.1-ctnh-slim") { transitive = false }
+        // modRuntimeOnly("curse.maven:smsn-1129397:7399448")
     }
 }
